kubernetes/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhir-converter-service
spec:
  selector:
    app: fhir-converter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
spec:
  selector:
    app: ingestion
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
