kubernetes/record-linkage-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: record-linkage-app
  name: record-linkage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: record-linkage-app
  template:
    metadata:
      labels:
        app: record-linkage-app
    spec:
      containers:
      - name: record-linkage-app
        image: ghcr.io/cdcgov/phdi/record-linkage:v1.0.7
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: record-linkage-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: record-linkage-app
